# hat-doit

./: README.rst  dodo.py  pyproject.toml  requirements.pip.dev.txt  requirements.pip.runtime.txt  requirements.pip.txt
schemas_json/: pep517.yaml  tool.yaml
src_doit/: __init__.py
src_py/hat/doit/: c.py  common.py  docs.py  js.py  pep517.py  py.py  pytest.py
src_py/hat/doit/eslint/: js.yaml  ts.yaml  ts.yml
