[project]
name = "hat-doit"
version = "0.15.15"
description = "Hat build utility functions"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "doit >=0.36.0",
    "flake8 >=7.0.0",
    "furo >=2024.5.6",
    "mkwhl ~=0.3.1",
    "packaging >=24.0",
    "pdoc >=14.1.0",
    "pytest >=8.2.2",
    "pytest-asyncio >=0.23.7",
    "pytest-cov >=4.1.0",
    "pytest-timeout >=2.3.1",
    "sphinx >=7.3.7",
    "tomli ~=2.0.1",
    "watchdog >=2.3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-doit.git"

[build-system]
build-backend = "hat.doit.pep517"
backend-path = ["src_py"]
requires = [
    "doit",
    "packaging",
    "tomli",
    "watchdog"
]
