[project]
name = "hat-doit"
version = "0.16.2"
description = "Hat build utility functions"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "doit >=0.36.0",
    "flake8 >=7.1.2",
    "furo >=2024.8.6",
    "mkwhl ~=0.3.1",
    "packaging >=24.2",
    "pdoc >=15.0.0",
    "pytest >=8.3.5",
    "pytest-asyncio >=0.25.1",
    "pytest-cov >=6.0.0",
    "pytest-timeout >=2.3.1",
    "sphinx >=8.2.3",
    "tomli >=2.0.1; python_version<'3.11'",
    "watchdog >=6.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "http://hat-open.com"
Repository = "https://github.com/hat-open/hat-doit.git"

[build-system]
build-backend = "hat.doit.pep517"
backend-path = ["src_py"]
requires = [
    "doit >=0.36.0",
    "packaging >=24.2",
    "tomli >=2.0.1; python_version<'3.11'",
    "watchdog >=6.0.0"
]
